--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -6,3 +6,31 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+/* marging: 0 && padding: 0 , because the browser handles them different */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* padding is removed from width and height, so that "width + padding = content-box" */
+}
+
+body {
+    font-family: 'Lato', sans-serif;  /* font-stuff should be in body (everytime) */
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #777;
+    padding: 30px;
+}
+
+.header {
+    height: 95vh;
+    background-image: linear-gradient(
+            to right bottom,
+            rgba(126, 213, 111, 0.8),
+            rgba(40, 180, 133, 0.8)),
+        url("../img/hero.jpg");
+    background-size: cover;
+    background-position: top;
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); /* defines what is visible (everything inside of the polygon). There is a quite great tool for that: https://bennettfeely.com/clippy/ */
+}
